# vrot

./: .gitignore  .gitmodules  Cargo.toml  Trunk.toml  index.html  tsconfig.json  voca.yaml  wasm-build.sh
src/: index.ts  lib.rs  main.rs
src/cli/: error.rs  mod.rs
src/wasm/: app.rs  mod.rs  voca.rs
style/: style.css
