[package]
name = "vrot"
version = "0.1.1"
authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
description = "Memorizing vocabulary helper"
license = "MIT"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
rand = "0.8.5"
rustyline = { version = "10.0.0", features = ["signal-hook", "with-fuzzy"] }
rustyline-derive = "0.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
