[package]
name = "vrot"
version = "0.2.0"
authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
description = "Memorizing vocabulary helper"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_family = "wasm"))'.profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"

[target.'cfg(target_family = "wasm")'.dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2.83"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rand = "0.8.5"
clap = { version = "4.0.22", features = ["derive"] }
rustyline = { version = "10.0.0", features = ["signal-hook", "with-fuzzy"] }
rustyline-derive = "0.7.0"
