[package]
name = "vrot"
version = "0.5.0"
authors = ["Sungbae Jeong <almagest0328@gmail.com>"]
description = "Memorizing vocabulary helper"
repository = "https://github.com/e0328eric/vrot.git"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[target.'cfg(not(target_family = "wasm"))'.profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.7"
rand = "0.8.5"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
leptos = "0.3.0"
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Blob",
  "FileReader",
  "File",
  "FileList",
  "HtmlInputElement",
  "ProgressEvent",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.3", features = ["derive"] }
itertools = "0.10"
rustyline = { version = "11.0", features = ["signal-hook", "with-fuzzy"] }
rustyline-derive = "0.8.0"
thiserror = "1.0.40"
